update service statistics add new orders statistic and refactoring manager service rename item on purchase
