# statistics/src/main/go/com.github/handlers/rest_handler.go
@@ -9,22 +9,25 @@ import (
 )
 
 type RestHandler struct {
-	loginHandler *LoginHandler
-	viewsHandler *ViewsHandler
-	config       *config.Config
-	tracer       *Tracer
+	loginHandler     *LoginHandler
+	viewsHandler     *ViewsHandler
+	newOrdersHandler *NewOrdersHandler
+	config           *config.Config
+	tracer           *Tracer
 }
 
 func NewRestHandler(
 	loginHandler *LoginHandler,
 	viewsHandler *ViewsHandler,
+	newOrdersHandler *NewOrdersHandler,
 	config *config.Config,
 	tracer *Tracer) *RestHandler {
 	return &RestHandler{
-		loginHandler: loginHandler,
-		viewsHandler: viewsHandler,
-		config:       config,
-		tracer:       tracer,
+		loginHandler:     loginHandler,
+		viewsHandler:     viewsHandler,
+		newOrdersHandler: newOrdersHandler,
+		config:           config,
+		tracer:           tracer,
 	}
 }
 
@@ -40,6 +43,7 @@ func (handler *RestHandler) Handler() http.Handler {
 	router.
 		HandleFunc("/v1/logins/edit", handler.loginHandler.CreateLogin).
 		Methods(http.MethodPost)
+
 	router.
 		HandleFunc("/v1/views/fetch/{userId}", handler.viewsHandler.FindByUserId).
 		Methods(http.MethodGet)
@@ -54,11 +58,20 @@ func (handler *RestHandler) Handler() http.Handler {
 		HandleFunc("/v1/views", handler.viewsHandler.CreateViews).
 		Methods(http.MethodPost)
 
+	router.
+		HandleFunc("/v1/orders/fetch", handler.newOrdersHandler.FindBetweenTime).
+		Queries("start", "{start}", "end", "{end}").
+		Methods(http.MethodGet)
+	router.
+		HandleFunc("/v1/orders/edit", handler.newOrdersHandler.CreateOrder).
+		Methods(http.MethodPost)
+
 	router.Handle("/metrics", promhttp.Handler())
 
 	if handler.config.IsSwaggerEnable {
 		router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 	}
+
 	zipkinMiddleware := handler.tracer.CreateMiddleware()
 	router.Use(zipkinMiddleware)
 	router.Use(prometheusMiddleware)
